// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar renders All items view on desktop 1`] = `
<div
  class="readinglists-nav-bar"
  showdropdown="true"
>
  <!--v-if-->
  <a
    class="readinglists-special-nav-link readinglists-special-nav-link--active"
  >
    
    All items
    
  </a>
  <div
    class="cdx-menu-button"
  >
    <button
      aria-controls="v-1"
      aria-expanded="false"
      aria-haspopup="menu"
      class="cdx-button cdx-button--action-progressive cdx-button--weight-quiet cdx-button--size-medium"
      id="v-0"
    >
      
      
      Collections 
      <span
        class="cdx-icon cdx-icon--medium"
      >
        <svg
          aria-hidden="true"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!--v-if-->
          <g>
            <path
              d="m16.7 8-6 6H9.3l-6-6 1.4-1.4 5.3 5.3 5.3-5.3z"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
    <div
      class="cdx-menu-button__menu-wrapper"
    >
      <!--teleport start-->
      <div
        class="cdx-menu cdx-menu-button__menu"
        style="display: none;"
      >
        <ul
          aria-labelledby="v-0"
          class="cdx-menu__listbox"
          id="v-1"
          role="menu"
          tabindex="-1"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          <!--v-if-->
        </ul>
      </div>
      <!--teleport end-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`NavigationBar renders All items view on mobile 1`] = `
<div
  class="readinglists-nav-bar"
  showdropdown="false"
>
  <!--v-if-->
  <a
    class="readinglists-special-nav-link readinglists-special-nav-link--active"
  >
    
    All items
    
  </a>
  <div
    class="cdx-menu-button"
  >
    <button
      aria-controls="v-1"
      aria-expanded="false"
      aria-haspopup="menu"
      class="cdx-button cdx-button--action-progressive cdx-button--weight-quiet cdx-button--size-medium"
      id="v-0"
    >
      
      
      Collections 
      <span
        class="cdx-icon cdx-icon--medium"
      >
        <svg
          aria-hidden="true"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!--v-if-->
          <g>
            <path
              d="m16.7 8-6 6H9.3l-6-6 1.4-1.4 5.3 5.3 5.3-5.3z"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
    <div
      class="cdx-menu-button__menu-wrapper"
    >
      <!--teleport start-->
      <div
        class="cdx-menu cdx-menu-button__menu"
        style="display: none;"
      >
        <ul
          aria-labelledby="v-0"
          class="cdx-menu__listbox"
          id="v-1"
          role="menu"
          tabindex="-1"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          <!--v-if-->
        </ul>
      </div>
      <!--teleport end-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`NavigationBar renders Collections view on desktop 1`] = `
<div
  class="readinglists-nav-bar"
  showdropdown="true"
>
  <!--v-if-->
  <a
    class="readinglists-special-nav-link"
  >
    
    All items
    
  </a>
  <div
    class="cdx-menu-button"
  >
    <button
      aria-controls="v-1"
      aria-expanded="false"
      aria-haspopup="menu"
      class="cdx-button cdx-button--action-progressive cdx-button--weight-quiet cdx-button--size-medium"
      id="v-0"
    >
      
      
      Collections 
      <span
        class="cdx-icon cdx-icon--medium"
      >
        <svg
          aria-hidden="true"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!--v-if-->
          <g>
            <path
              d="m16.7 8-6 6H9.3l-6-6 1.4-1.4 5.3 5.3 5.3-5.3z"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
    <div
      class="cdx-menu-button__menu-wrapper"
    >
      <!--teleport start-->
      <div
        class="cdx-menu cdx-menu-button__menu"
        style="display: none;"
      >
        <ul
          aria-labelledby="v-0"
          class="cdx-menu__listbox"
          id="v-1"
          role="menu"
          tabindex="-1"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          <!--v-if-->
        </ul>
      </div>
      <!--teleport end-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`NavigationBar renders Collections view on mobile 1`] = `
<div
  class="readinglists-nav-bar"
  showdropdown="false"
>
  <!--v-if-->
  <a
    class="readinglists-special-nav-link"
  >
    
    All items
    
  </a>
  <div
    class="cdx-menu-button"
  >
    <button
      aria-controls="v-1"
      aria-expanded="false"
      aria-haspopup="menu"
      class="cdx-button cdx-button--action-progressive cdx-button--weight-quiet cdx-button--size-medium"
      id="v-0"
    >
      
      
      Collections 
      <span
        class="cdx-icon cdx-icon--medium"
      >
        <svg
          aria-hidden="true"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!--v-if-->
          <g>
            <path
              d="m16.7 8-6 6H9.3l-6-6 1.4-1.4 5.3 5.3 5.3-5.3z"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
    <div
      class="cdx-menu-button__menu-wrapper"
    >
      <!--teleport start-->
      <div
        class="cdx-menu cdx-menu-button__menu"
        style="display: none;"
      >
        <ul
          aria-labelledby="v-0"
          class="cdx-menu__listbox"
          id="v-1"
          role="menu"
          tabindex="-1"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          <!--v-if-->
        </ul>
      </div>
      <!--teleport end-->
    </div>
  </div>
  <!--v-if-->
</div>
`;
